--- a/src/app/components/todo-list/completed/completed.component.html
+++ b/src/app/components/todo-list/completed/completed.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <br/>
+  <br /><br /><br /><br />
   <h2><b>Completed Tasks</b></h2>
   <div >
     <button mat-button (click)="createTask()" class="button header-right"><mat-icon>add</mat-icon> Create Task</button>
@@ -63,6 +63,13 @@
     <ng-container matColumnDef='action'>
       <th mat-header-cell *matHeaderCellDef class="dark_bg">Action</th>
       <td mat-cell *matCellDef="let element">
+        <span class="option" (click)="archiveItem(element)" style="cursor: pointer;" *ngIf="!element.archieved">
+          <mat-icon>archive</mat-icon>
+        </span>
+        <span class="option" (click)="unarchiveItem(element)" style="cursor: pointer;" *ngIf="element.archieved">
+          <mat-icon>arrow_upward</mat-icon>
+        </span>
+        <span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
         <span class="option" (click)="deleteItem(element)" style="cursor: pointer;"><mat-icon>delete</mat-icon></span>
       </td>
     </ng-container>
