--- a/src/app/components/todo-list/label-det/label-det.component.scss
+++ b/src/app/components/todo-list/label-det/label-det.component.scss
@@ -4,8 +4,8 @@ table {
   width: 100%;
 }
 
-th.mat-sort-header-sorted {
-  color: black;
+::ng-deep .mat-sort-header-arrow {
+  color: white;
 }
 
 .mat-table-sticky {
