--- a/src/app/components/todo-list/label/label.component.scss
+++ b/src/app/components/todo-list/label/label.component.scss
@@ -4,9 +4,10 @@ table {
   width: 100%
 }
 
-th.mat-sort-header-sorted {
-  color: white
+::ng-deep .mat-sort-header-arrow {
+  color: white;
 }
+
 
 .mat-table-sticky {
   border-top: 1px solid
