--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -12,14 +12,8 @@ h3 {
     background-color: #57b846;
     color: white;
   }
-.cal-month-view .cal-day-badge {
-  background-color: #57b846;
-  color: #fff; }
 
-.cal-month-view .cal-day-cell.cal-weekend .cal-day-number {
-  color: #57b846; }
-
-.cal-week-view .cal-event {
+  ::ng-deep .cal-week-view .cal-event {
   background-color: #d1e8ff;
-  border-color: #1e90ff;
   color: white }
+
