--- a/src/app/components/todo-list/label-det/label-det.component.html
+++ b/src/app/components/todo-list/label-det/label-det.component.html
@@ -58,7 +58,7 @@
     </ng-container>
     <ng-container matColumnDef='dueDate'>
       <th mat-header-cell *matHeaderCellDef mat-sort-header class="dark_bg">Due Date</th>
-      <td mat-cell *matCellDef="let element">{{element.dueDate | date: 'short' }}</td>
+      <td mat-cell *matCellDef="let element">{{element.dueDate | date: 'mediumDate' }}</td>
     </ng-container>
     <ng-container matColumnDef='action'>
       <th mat-header-cell *matHeaderCellDef class="dark_bg">Action</th>
