--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -23,3 +23,21 @@ h3 {
   background-color: #d1e8ff;
   border-color: #1e90ff;
   color: white }
+
+// .cal-event-title {
+//   color: black;
+// }
+
+// .ng-star-inserted {
+//   color: black;
+// }
+
+// .cal-week-view .cal-event {
+//   color: black;
+// }
+
+.cal-month-view .bg-pink,
+.cal-week-view .cal-day-columns .bg-pink,
+.cal-day-view .bg-pink {
+  background-color: hotpink !important;
+}
