--- a/src/app/shared/head/head.component.html
+++ b/src/app/shared/head/head.component.html
@@ -51,6 +51,11 @@
         <mat-icon aria-hidden="false">account_circle</mat-icon>
         &nbsp;&nbsp;&nbsp;&nbsp;My Account
       </button>
+      <hr/>
+      <button mat-button (click)="menuBtnClicked('developers')" id='menu-developers' class='menu-developers'>
+        <mat-icon aria-hidden="false">build</mat-icon>
+        &nbsp;&nbsp;&nbsp;&nbsp;Developers
+      </button>
     </div>
   </div>
 </div>
