adding screenshots....again

--- a/src/app/shared/head/head.component.html
+++ b/src/app/shared/head/head.component.html
@@ -57,9 +57,14 @@
         &nbsp;&nbsp;&nbsp;&nbsp;My Account
       </button>
       <hr/>
-      <button mat-button (click)="menuBtnClicked('developers')" id='menu-developers' class='menu-developers'>
+      <button mat-button (click)="menuBtnClicked('developers')" id='menu-developers' class='menu-btn'>
         <mat-icon aria-hidden="false">build</mat-icon>
         &nbsp;&nbsp;&nbsp;&nbsp;Developers
+      </button>
+      <br /><br />
+      <button mat-button (click)="menuBtnClicked('wiki')" id='menu-wiki' class='menu-btn'>
+        <mat-icon aria-hidden="false">article</mat-icon>
+        &nbsp;&nbsp;&nbsp;&nbsp;Project Wiki
       </button>
     </div>
   </div>
