--- a/src/app/components/developers/developers.component.html
+++ b/src/app/components/developers/developers.component.html
@@ -17,11 +17,11 @@
 
   <mat-card >
     <mat-card-header>
-      <mat-card-title>Date Bangalore</mat-card-title>
+      <mat-card-title>Sakshi Srivastava</mat-card-title>
       <mat-card-subtitle>Product Engineer at BIZense | SRM</mat-card-subtitle>
     </mat-card-header>
     <img mat-card-image src="https://avatars1.githubusercontent.com/u/18211617?s=400&v=4" style="width: 100%">
-    <mat-card-content>She is my date. ENOUGH SAID!!!!</mat-card-content>
+    <mat-card-content>She is Full Stack Developer at BIZense Technologies.</mat-card-content>
     <mat-card-actions>
       <button mat-flat-button><a href="https://github.com/sakshi30">Github</a></button>
       <button mat-flat-button><a href="https://www.linkedin.com/in/sakshi-srivastava-a7482295/">Linkedin</a></button>
